--- a/netflix/netflix_app/templates/index.html
+++ b/netflix/netflix_app/templates/index.html
@@ -1,21 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
-
-
 {% block site-baslik %}
     Anasayfa
 {% endblock site-baslik %}
     
 
-
-
-
 {% block site-icerik %}
     
 
     
+
 <section class="hero-image">
 
     <div class="regular-nav">
@@ -25,7 +20,7 @@
     </div>
 
     <div class="ms-auto me-5">
-        <button class="btn btn-danger" type="button">Oturum Aç</button>
+        <a href="{% url 'login-page' %}" class="btn btn-danger" type="button">Oturum Aç</a>
     </div>
     
     </div>
@@ -41,7 +36,7 @@
                     <div class="input-group">
                         <input type="email" class="form-control" placeholder="E-Mail"
                             aria-label="Recipient's username" aria-describedby="basic-addon2">
-                        <button class="btn btn-danger" type="button">Başlayın</button>
+                        <a href="{% url 'register-page' %}" class="btn btn-danger" type="button">Başlayın</a>
                     </div>
             </div>
         
@@ -162,6 +157,7 @@
         </div>
     </div>
 </section>
-
 {% endblock site-icerik %}
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
