--- a/netflix/user_app/templates/register.html
+++ b/netflix/user_app/templates/register.html
@@ -1,78 +1,82 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
 
 
 {% block site-baslik %}
-    KAYİT OL
+    Kayıt Ol
 {% endblock site-baslik %}
     
 
+
+{% block register-css %}
     
-    {% block register-css %}
-    <style>
+<style>
 
-        * {
-            margin: 0;
-            bottom: 0;
-            box-sizing: border-box;
-        }
-        html, body {
-            height: 100%;
-        }
+    * {
+        margin: 0;
+        bottom: 0;
+        box-sizing: border-box;
+    }
+    html, body {
+        height: 100%;
+    }
 
-        .hero {
+    .hero {
 
-            height: 100%;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://raw.githubusercontent.com/thatanjan/netflix-clone-yt/youtube/media/banner.jpg");
-            display: flex;
-        }
+        height: 100%;
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://raw.githubusercontent.com/thatanjan/netflix-clone-yt/youtube/media/banner.jpg");
+        display: flex;
+    }
 
-        .loginContainer {
+    .loginContainer {
 
-            height: 70%;
-            width: 30%;
-            margin: auto;
-            background: #0a0909;
-            padding: 2rem;
-            opacity: 0.7;
-            text-align: center;
-        }
+        height: 70%;
+        width: 30%;
+        margin: auto;
+        background: #0a0909;
+        padding: 2rem;
+        opacity: 0.7;
+        text-align: center;
+    }
 
-        .loginContainer input {
+    .loginContainer input {
 
-            width: 90%;
-            margin-bottom: 2rem;
-            padding: 12px;
-        }
+        width: 90%;
+        margin-bottom: 2rem;
+        padding: 12px;
+    }
 
-        .text { 
-            text-align: start;
-            color: white;
-            margin-top: 3rem;
-            margin-bottom: 1rem;
-            margin-left: 1rem;
-        }
+    .text { 
+        text-align: start;
+        color: white;
+        margin-top: 3rem;
+        margin-bottom: 1rem;
+        margin-left: 1rem;
+    }
 
-        .loginContainer button{
+    .loginContainer button{
 
-            background-color: red;
-            padding: 1rem;
-            color: white;
-            border: 0;
-            cursor: pointer;
-            opacity: 1;
-            width: 90%;
-        }
-    </style>
-    {% endblock register-css %}
-        
+        background-color: red;
+        padding: 1rem;
+        color: white;
+        border: 0;
+        cursor: pointer;
+        opacity: 1;
+        width: 90%;
+    }
+</style>
 
+{% endblock register-css %}
     
 
 
+
+{% block site-icerik %}
     
-    {% block site-icerik %}
 
     {{errorForm}}
+    
+
 
     <div class="hero">
 
@@ -81,23 +85,19 @@
 
         
         <div class="text">
-            <h3>Kayit Ol</h3>
+            <h3>Oturum Aç</h3>
         </div>
        
 
-        <form action="{% url 'page-register' %}" method="post">
+        <form action="{% url 'register-page' %}" method="post">
             {% csrf_token %}
-
             {{registerForm}}
-       
+
             <div class="login">
-                <button>Kayit Ol</button>
+                <button>Kayıt Ol</button>
             </div>
-        </div>
 
         </form>
 
     </div>
-    {% endblock site-icerik %}
-        
-    
+{% endblock site-icerik %}
