--- a/netflix/netflix_app/templates/index.html
+++ b/netflix/netflix_app/templates/index.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
 {% load static %}
 
+
+
 {% block site-baslik %}
     Anasayfa
 {% endblock site-baslik %}
-    
+
+
 
 {% block site-icerik %}
-    
+  
 
-    
 
 <section class="hero-image">
 
@@ -20,7 +22,7 @@
     </div>
 
     <div class="ms-auto me-5">
-        <a href="{% url 'login-page' %}" class="btn btn-danger" type="button">Oturum Aç</a>
+        <button id="loginBtn" class="btn btn-danger" type="button">Oturum Aç</button>
     </div>
     
     </div>
@@ -36,7 +38,7 @@
                     <div class="input-group">
                         <input type="email" class="form-control" placeholder="E-Mail"
                             aria-label="Recipient's username" aria-describedby="basic-addon2">
-                        <a href="{% url 'register-page' %}" class="btn btn-danger" type="button">Başlayın</a>
+                        <button id="registerBtn" class="btn btn-danger" type="button">Başlayın</button>
                     </div>
             </div>
         
@@ -157,7 +159,23 @@
         </div>
     </div>
 </section>
+
+
+<script>
+
+    document.getElementById("loginBtn").onclick = function() {
+
+        window.location.href = "{% url 'page-login' %}"
+    }
+
+    document.getElementById("registerBtn").onclick = function() {
+
+        window.location.href = "{% url 'page-register' %}"
+    }
+
+</script>
+
+
+
 {% endblock site-icerik %}
 
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
