--- a/netflix/user_app/templates/login.html
+++ b/netflix/user_app/templates/login.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %}
-
+{% extends 'base.html' %}
 
 
 
@@ -8,72 +7,75 @@
 {% endblock site-baslik %}
     
 
-
-{% block register-css %}
-<style>
-
-    * {
-        margin: 0;
-        bottom: 0;
-        box-sizing: border-box;
-    }
-    html, body {
-        height: 100%;
-    }
-
-    .hero {
-
-        height: 100%;
-        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://raw.githubusercontent.com/thatanjan/netflix-clone-yt/youtube/media/banner.jpg");
-        display: flex;
-    }
-
-    .loginContainer {
-
-        height: 70%;
-        width: 30%;
-        margin: auto;
-        background: #0a0909;
-        padding: 2rem;
-        opacity: 0.7;
-        text-align: center;
-    }
-
-    .loginContainer input {
-
-        width: 90%;
-        margin-bottom: 2rem;
-        padding: 12px;
-    }
-
-    .text { 
-        text-align: start;
-        color: white;
-        margin-top: 3rem;
-        margin-bottom: 1rem;
-        margin-left: 1rem;
-    }
-
-    .loginContainer button{
-
-        background-color: red;
-        padding: 1rem;
-        color: white;
-        border: 0;
-        cursor: pointer;
-        opacity: 1;
-        width: 90%;
-    }
-</style>
-{% endblock register-css %}
-    
-   
-
-{% block site-icerik %}
+{% block style %}
     
 
     
+
+    <style>
+
+        * {
+            margin: 0;
+            bottom: 0;
+            box-sizing: border-box;
+        }
+        html, body {
+            height: 100%;
+        }
+
+        .hero {
+
+            height: 100%;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://raw.githubusercontent.com/thatanjan/netflix-clone-yt/youtube/media/banner.jpg");
+            display: flex;
+        }
+
+        .loginContainer {
+
+            height: 70%;
+            width: 30%;
+            margin: auto;
+            background: #0a0909;
+            padding: 2rem;
+            opacity: 0.7;
+            text-align: center;
+        }
+
+        .loginContainer input {
+
+            width: 90%;
+            margin-bottom: 2rem;
+            padding: 12px;
+        }
+
+        .text { 
+            text-align: start;
+            color: white;
+            margin-top: 3rem;
+            margin-bottom: 1rem;
+            margin-left: 1rem;
+        }
+
+        .loginContainer button{
+
+            background-color: red;
+            padding: 1rem;
+            color: white;
+            border: 0;
+            cursor: pointer;
+            opacity: 1;
+            width: 90%;
+        }
+    </style>
+
+{% endblock style %}
+
     
+    
+    {% block site-icerik %}
+        
+    
+        
 
     <div class="hero">
 
@@ -86,18 +88,19 @@
         </div>
        
 
-        <form action="">
+        <form action="{% url 'page-login' %}" method="post">
+            {% csrf_token %}
 
             <div>
-                <input type="text" placeholder="giriş">
+                <input name="username" type="text" placeholder="Kullanici Adi">
             </div>
 
             <div>
-                <input type="text" placeholder="sifre">
+                <input name="sifre" type="password" placeholder="sifre">
             </div>
        
             <div class="login">
-                <button>Oturum Aç</button>
+                <button type="submit">Oturum Aç</button>
             </div>
         </div>
 
